--- a/folders-code-templates/code/2-make-analysis-output/2.1-report-results.Rmd
+++ b/folders-code-templates/code/2-make-analysis-output/2.1-report-results.Rmd
@@ -10,7 +10,8 @@ knitr::opts_chunk$set(echo = FALSE)
 
 ```{r eval=FALSE}
 # Project: 
-#   Jira: 
+#   Links: 
+#   Description: 
 # 
 # Data flow
 #   See config.json for data folder (i.e., config['path_data']).
@@ -38,10 +39,12 @@ config <- jsonlite::fromJSON("/.../output/config.json")
 str(config)
 
 
-## Load custom tools.
-files_sources <- list.files(paste0(path_code, "ejdtools/"))
-sapply(paste0(path_code, "ejdtools/", files_sources), source)
-rm(files_sources)
+# ## Load custom tools.
+# path_ejdtools <- "/.../ejdtools/"
+# files_sources <- list.files(path_ejdtools)
+# files_sources <- files_sources[grepl(".R", files_sources)]
+# sapply(paste0(path_ejdtools, files_sources), source)
+# rm(files_sources)
 
 
 
