--- a/folders-code-templates/code/2-make-analysis-output/2.1-report-results.Rmd
+++ b/folders-code-templates/code/2-make-analysis-output/2.1-report-results.Rmd
@@ -50,7 +50,7 @@ str(config)
 
 # Load datasets or data image.
 dataset_name1 <- feather::read_feather(paste0(config$output_ao, "[dataset_name1].feather"))
-load.image(paste0(config$output_ao, "[data_image_name].Rmd"))
+load.image(paste0(config$output_ao, "[data_image_name].RData"))
 ```
 
 ## R Markdown
