added # RUN THIS CODE IN TERMINAL BEFORE RUNNING THIS CELL TO PREVENT INSTALL.PACKAGES() ERRORS: # sudo chmod -R 777 /opt/domino/spark/R/

--- a/folders-code-templates/code/2-make-analysis-output/2.1-report-results.Rmd
+++ b/folders-code-templates/code/2-make-analysis-output/2.1-report-results.Rmd
@@ -21,6 +21,8 @@ knitr::opts_chunk$set(echo = FALSE)
 
 
 # Preliminary processing
+# RUN THIS CODE IN TERMINAL BEFORE RUNNING THIS CELL TO PREVENT INSTALL.PACKAGES() ERRORS:
+# sudo chmod -R 777 /opt/domino/spark/R/
 
 
 ## Clear environment and install/load packages.
