updated .ipynb files

--- a/folders-code-templates/code/0-make-processed-data/0.0-make-config.ipynb
+++ b/folders-code-templates/code/0-make-processed-data/0.0-make-config.ipynb
@@ -27,6 +27,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# RUN THIS CODE IN TERMINAL BEFORE RUNNING THIS CELL TO PREVENT INSTALL.PACKAGES() ERRORS:",
+    "# sudo chmod -R 777 /opt/domino/spark/R/\n",
+    "\n",
     "## Install/load packages.\n",
     "if (!require(\"pacman\")) install.packages(\"pacman\") # just to make sure \"pacman\" is installed\n",
     "pacman::p_load(jsonlite)"
