--- a/folders-code-templates/code/1-make-analysis-data/1.0-make-analysis-data.ipynb
+++ b/folders-code-templates/code/1-make-analysis-data/1.0-make-analysis-data.ipynb
@@ -26,6 +26,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# RUN THIS CODE IN TERMINAL BEFORE RUNNING THIS CELL TO PREVENT INSTALL.PACKAGES() ERRORS:",
+    "# sudo chmod -R 777 /opt/domino/spark/R/\n",
+    "\n",
     "## Clear environment and install/load packages.\n",
     "rm(list=ls())\n",
     "if (!require(\"pacman\")) install.packages(\"pacman\") # just to make sure \"pacman\" is installed\n",
@@ -44,7 +47,7 @@
     "\n",
     "## Load custom tools.\n",
     "files_sources <- list.files(paste0(path_code, \"ejdtools/\"))\n",
-    "sapply(paste0(path_code, \"ejdtools/\", files_sources), source)\n",
+    "sapply(paste0(config$path_code, \"ejdtools/\", files_sources), source)\n",
     "rm(files_sources)"
    ]
   },
