--- a/folders-code-templates/code/2-make-analysis-output/2.0-make-analysis-output.ipynb
+++ b/folders-code-templates/code/2-make-analysis-output/2.0-make-analysis-output.ipynb
@@ -46,7 +46,7 @@
     "\n",
     "\n",
     "## Load custom tools.\n",
-    "files_sources <- list.files(paste0(path_code, \"ejdtools/\"))\n",
+    "files_sources <- list.files(paste0(config$path_code, \"ejdtools/\"))\n",
     "sapply(paste0(config$path_code, \"ejdtools/\", files_sources), source)\n",
     "rm(files_sources)"
    ]
