--- a/folders-code-templates/code/0-make-processed-data/0.0-make-config.ipynb
+++ b/folders-code-templates/code/0-make-processed-data/0.0-make-config.ipynb
@@ -42,8 +42,8 @@
    "outputs": [],
    "source": [
     "# Create config file.\n",
-    "path_code <- # e.g., \"/.../[project_slug]/code/\"\n",
-    "path_data <- # e.g., \"/.../[project_slug]/data/\"\n",
+    "path_code <- # e.g., \"/.../[project_slug]/code/\" or \"/mnt/code/\"\n",
+    "path_data <- # e.g., \"/.../[project_slug]/data/\" or \"/mnt/data/data-analysis-[client]-[project_slug]/\"\n",
     "config <- jsonlite::write_json( # https://rdrr.io/github/skgrange/threadr/man/write_json.html\n",
     "  \n",
     "  list(\n",
